<resources>
    <string name="app_name">Submission_Awal_Intermediate_AndroidView</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Login</string>
    <string name="donthaveaccount">Belum punya akun sebelumnya?</string>
    <string name="daftar">Daftar</string>
    <string name="greeting2">Mohon login untuk melanjutkan</string>
    <string name="greeting1">Selamat Datang</string>

    <string name="title_menu_1">Aplikasi Cerita No.1 Di Indonesia</string>
    <string name="title_menu_2">Ekspresikan Keluh Kesah-Mu</string>
    <string name="title_menu_3">Anda Juga Dapat Memberikan Pesan Terkait Pembelajaran</string>
    <string name="title_menu_4">Mendekatkan Yang Jauh</string>
    <string name="desc_menu_1">Ceritakan momen yang anda lalui hari ini kepada 1 juta pengguna yang tersebar di seluruh Indonesia.</string>
    <string name="desc_menu_2">Tidak baik untuk memendam apa yang kamu rasakan, silahkan tumpahkan perasaan anda pada story yang anda buat.</string>
    <string name="desc_menu_3">Dengan begitu anda dapat berbagi ilmu kepada sesama pengguna.</string>
    <string name="desc_menu_4">Dengan membaca curhatan pengguna dapat mengisi waktu luang-mu.</string>
    <string name="learn_now">Coba Sekarang</string>
    <string name="data_kosong">Data Tidak Ditemukan</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="register">Daftar</string>

    <string name="empty_name">Nama Tidak Boleh Kosong!</string>
    <string name="empty_email">Email Tidak Boleh Kosong!</string>
    <string name="empty_password">Kata Sandi Tidak Boleh Kosong!</string>
    <string name="empty_passconf">Kata Sandi Konfirmasi Tidak Boleh Kosong!</string>

    <string name="invalid_email">Format Email Salah!</string>
    <string name="invalid_password">Password harus lebih dari 8 karakter!</string>
    <string name="description">Deskripsi</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="already_have_an_account">Sudah punya akun sebelumnya?</string>
    <string name="name">Nama</string>
    <string name="create_account_to_continue">Buat akun untuk melanjutkan</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="passconf">Konfirmasi Kata Sandi</string>
    <string name="success_register">Pendaftaran berhasil</string>
    <string name="email_have_been_registered">Email sudah pernah digunakan!</string>
    <string name="server_error">Server sedang gangguan, coba lagi setelah beberapa saat!</string>
    <string name="check_input">Periksa lagi inputan anda!</string>
    <string name="password_passconf_is_same">Kata sandi konfirmasi harus sama dengan kata sandi!</string>
    <string name="success_login">Login Berhasil</string>
    <string name="email_password_not_found">Email atau password tidak ditemukan!</string>
    <string name="empty_description">Deskripsi Kosong</string>
    <string name="Permisson_denied">Tidak mendapatkan permission.</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="input_image_first">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="please_input_description">Masukkan Deskripsi</string>
    <string name="take_picture">Ambil Gambar</string>
    <string name="change_camera">Mengubah arah kamera</string>
    <string name="post_picture">Gambar postingan</string>
    <string name="discuss_with_friend">Gambar bercerita seharian diperapian bersama teman</string>
    <string name="discuss_with_friend_2">Gambar berdiskusi bersama teman</string>
    <string name="learn_something">Gambar orang sedang mempelajari sesuatu</string>
    <string name="indonesia_map">Gambar peta Indonesia</string>
    <string name="profile_picture">Gambar fitur profile picture yang akan dirilis pada update selanjutnya</string>
    <string name="dicoding_picture_logo">Gambar Logo Dicoding</string>
    <string name="preview_picture">Preview dari gambar yang anda inputkan</string>
    <string name="story_post_picture">Gambar postingan Story</string>
    <string name="connect_exception">Gagal terhubung dengan server. Mohon periksa koneksi internet anda</string>
    <string name="socket_timeout_exception">Terjadi timeout ketika mencoba menghubungkan ke server. Mohon coba setelah beberapa saat.</string>
    <string name="io_exception">Gagal untuk mendapatkan stories</string>
    <string name="else_error_message">Gagal untuk mendapatkan stories. Mohon coba setelah beberapa saat.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">Map</string>
    <string name="load_maps_failed">Gagal me-load maps, coba lagi setelah beberapa saat!</string>
    <string name="failed_load_story">Gagal menampilkan data</string>
</resources>